tests/miniJava/neg/006706_mutation.MiniJava
class java { public static void static ( String [ ] java ) { { } } }
